# hf-agents-course

./: .gitignore  README.md  Unit1-SmallAgent.ipynb  Unit1-SmolAgentHF.ipynb  dummy_script.py  pyproject.toml  requirements.txt
ollama/: smol_compatiable_model.py
unit1_smol_agents/: Unit1-SmallAgent.ipynb  summary.md
unit2/: MultiAgentSet-UP.ipynb  (+1 more)
unit2.1_multiagent_smol_agents/: multiagent_notebook.ipynb
unit2.2/: llama_index_llm_completion.ipynb  llama_index_notebook_about_tools.ipynb  llama_index_rag.ipynb
unit2.2_llama_index/: default_try_experiment.ipynb  llama_index_tools_default.ipynb  llm_completion.ipynb  researcher.ipynb  researcher_v0.ipynb  researcher_v1.ipynb  simple_rag.ipynb  using_tools.ipynb
unit2.3_langgraph/: researcher_v1.ipynb  researcher_v2.ipynb  researcher_v3.ipynb  researcher_v5.ipynb
unit4_general_agent/generalist/: pyproject.toml
unit4_general_agent/generalist/notebooks/: probe_api.ipynb  test_package.ipynb  web_resercher_v1.ipynb
unit4_general_agent/generalist/notebooks/legacy/: generalist_v1.5.ipynb  generalist_v1.ipynb  web_resercher_v0.ipynb  web_resercher_v0_5.ipynb
unit4_general_agent/generalist/src/generalist/: __init__.py
unit4_general_agent/generalist/src/generalist/agents/: core.py
unit4_general_agent/generalist/src/generalist/models/: core.py
unit4_general_agent/generalist/src/generalist/tools/: __init__.py  audio_transcribe.py  code.py  data_model.py  media_download.py  planning.py  summarisers.py  text_processing.py  web_search.py
unit4_general_agent/generalist/src/generalist/utils/: __init__.py
(+14 files in other folders)
