[tool.poetry]
name = "hf-course"
version = "0.1.0"
description = "hugging face agents course"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.10"
gradio = "^5.30.0"
duckduckgo-search = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
